# microbenchmark-grpc

./: lockstat.py
go/: go.mod  go.sum
go-tcp/: go.mod  go.sum
go-tcp/client/: client  main.go
go-tcp/server/: main.go  server
go/client/: main.go
rust/: Cargo.toml  build.rs
rust-hyper/: Cargo.toml
rust-hyper/src/helloworld/: client.rs  server.rs
rust-tcp/: Cargo.toml
rust-tcp-channel/: Cargo.toml
rust-tcp-channel/src/helloworld/: client.rs  server.rs  tcp.rs
rust-tcp/src/helloworld/: client.rs  server.rs
rust/src/helloworld/: client.rs  server.rs
