[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "server"
path = "src/helloworld/server.rs"

[[bin]]
name = "client"
path = "src/helloworld/client.rs"


[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.0.9", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }


[build-dependencies]
tonic-build = "0.8"
