[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "server"
path = "src/helloworld/server.rs"

[[bin]]
name = "client"
path = "src/helloworld/client.rs"


[dependencies]
tokio = { version = "1.23.0", features = [ "full"] }
clap = { version = "4.0.9", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
tonic-build = "0.8"
