[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"


[dependencies]
async-stream = "0.3"
futures-util = "0.3.19"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"
tokio = { version = "1.23.0", features = [ "rt-multi-thread", "time", "fs",
    "macros", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-metrics = { version = "0.1.0", default-features = false }
tonic = "0.8"
tower = { version = "0.4" }
clap = { version = "4.0.9", features = ["derive"] }
# Required for routeguide
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tracing
tracing = "0.1.16"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
# Required for wellknown types
prost-types = "0.11"
# streaming example
h2 = "0.3"

tokio-rustls = "*"
hyper-rustls = { version = "0.23", features = ["http2"] }
rustls-pemfile = "*"
tower-http = { version = "0.3", features = ["add-extension", "util"] }


[build-dependencies]
tonic-build = "0.8"
